<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="about">"Unit Converter is a simple, user friendly unit converter. It has the most common units of measure and allows creating a favorite list for commonly used conversions. The preference menu allows for customizing the look and feel of the application. 

Bug reports and feature suggestions are welcome. 

Email: wopnersoft@gmail.com 
Website: http://wopnersoft.blogspot.com"</string>
    <string name="About_Label">About Unit Converter</string>
    <string name="AccelerationLinearUnitConverter_foot_second_square">Foot/Second Squared (ft/s²)</string>
    <string name="AccelerationLinearUnitConverter_galileo">Galileo</string>
    <string name="AccelerationLinearUnitConverter_gravity">Gravity (Earth)</string>
    <string name="AccelerationLinearUnitConverter_inch_second_square">Inch/Second Squared (in/s²)</string>
    <string name="AccelerationLinearUnitConverter_kilometer_second_square">kilometer/Second Squared (km/s²)</string>
    <string name="AccelerationLinearUnitConverter_meter_second_square">Meter/Second Squared (m/s²)</string>
    <string name="AccelerationLinearUnitConverter_mile_second_square">Mile/Second Squared (mi/s²)</string>
    <string name="AccelerationLinearUnitConverter_millimeter_second_square">Millimeter/Second Squared (mm/s²)</string>
    <string name="adfree_market_link">https://play.google.com/store/apps/details?id=com.wopnersoft.unitconverter.plus</string>
    <string name="allow">Allow the user access</string>
    <string name="AngleUnitConverter_Circle">Circle</string>
    <string name="AngleUnitConverter_Degree">Degree</string>
    <string name="AngleUnitConverter_Grad">Grad</string>
    <string name="AngleUnitConverter_Mil">Mil</string>
    <string name="AngleUnitConverter_Minute">Minute</string>
    <string name="AngleUnitConverter_Octant">Octant</string>
    <string name="AngleUnitConverter_Quadrant">Quadrant</string>
    <string name="AngleUnitConverter_Radian">Radian</string>
    <string name="AngleUnitConverter_Second">Second</string>
    <string name="AngleUnitConverter_Sextant">Sextant</string>
    <string name="app_name">Unit Converter</string>
    <string name="App_Not_Licensed">Error Verifying License</string>
    <string name="App_Not_Licensed_Desc">There was an error validating your license. If you have purchased this app then please try restarting your device and try again. Otherwise, please purchase it from Android Market.</string>
    <string name="app_ver">"Unit Converter
v. 2.8.5.8"</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="AreaUnitConverter_Acre">Acre (ac)</string>
    <string name="AreaUnitConverter_Are">Are (a)</string>
    <string name="AreaUnitConverter_Hectare">Hectare (ha)</string>
    <string name="AreaUnitConverter_Rood">Rood</string>
    <string name="AreaUnitConverter_Section">Section</string>
    <string name="AreaUnitConverter_Square_Centimeter">Square Centimeter (cm²)</string>
    <string name="AreaUnitConverter_Square_Decimeter">Square Decimeter (dm²)</string>
    <string name="AreaUnitConverter_Square_Dekameter">Square Dekameter (dam²)</string>
    <string name="AreaUnitConverter_Square_Foot">Square Foot (ft²)</string>
    <string name="AreaUnitConverter_Square_Hectometer">Square Hectometer (hm²)</string>
    <string name="AreaUnitConverter_Square_Inch">Square Inch (in²)</string>
    <string name="AreaUnitConverter_Square_Kilometer">Square kilometer (km²)</string>
    <string name="AreaUnitConverter_Square_Meter">Square Meter (m²)</string>
    <string name="AreaUnitConverter_Square_Mile">Square Mile (mi²)</string>
    <string name="AreaUnitConverter_Square_millimeter">Square Millimeter (mm²)</string>
    <string name="AreaUnitConverter_Square_Yard">Square Yard (yd²)</string>
    <string name="AreaUnitConverter_Township">Township</string>
    <string name="AWGConverter_AWG">AWG Number</string>
    <string name="AWGConverter_Inches">Diameter [Inch]</string>
    <string name="AWGConverter_MM">Diameter [mm]</string>
    <string name="AWGConverter_MM2">Cross Sectional Area [mm²]</string>
    <string name="btn_close">Close</string>
    <string name="btn_goto_market">Go to Play Store</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="buy_app">Buy App</string>
    <string name="buy_button">Buy app</string>
    <string name="buy_pro_currency_button">Purchase</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license…</string>
    <string name="color_a">alpha</string>
    <string name="color_custom_dialog_title">Custom Color</string>
    <string name="color_dialog_title">Color Selection</string>
    <string name="color_h">hue</string>
    <string name="color_s">saturation</string>
    <string name="color_v">value</string>
    <string name="computeButton">Calculate</string>
    <string name="computer_disclaimer">* This converter uses the SI Decimal/IEC Binary prefix naming convention. See http://en.wikipedia.org/wiki/Binary_prefix for an explanation and examples (i.e. kilo vs. Kibi, etc…).</string>
    <string name="copyright">Copyright © 2014 Wopnersoft</string>
    <string name="ctx_menu_deleteallcurrencydata">Delete all Currency Data</string>
    <string name="ctx_menu_deleteallfavorites">Delete all Favorites</string>
    <string name="custom_unit_multiplier_value">Unit Multiplier Value</string>
    <string name="custom_unit_select_ref">Select Reference Unit</string>
    <string name="custom_unit_unit_name">Unit Name</string>
    <string name="dnld_download_rate">Download Rate</string>
    <string name="dnld_download_size">Download Size</string>
    <string name="dnld_estimated_download_time">Estimated Download Time</string>
    <string name="dnld_per">Per</string>
    <string name="dnls_disclaimer">* Results are approximate</string>
    <string name="error_log_view">View Error Log</string>
    <string name="lbl_changelog">Changelog</string>
    <string name="lbl_changelog_desc">View Complete Changelog</string>
    <string name="lbl_down">↓</string>
    <string name="lbl_up">↑</string>
    <string name="mnu_about">About</string>
    <string name="mnu_add_favorite">Add Favorite</string>
    <string name="mnu_exit">Exit</string>
    <string name="mnu_preferences">Preferences</string>
    <string name="mnu_quick_list_view">Quick List View</string>
    <string name="mnu_reload_currency">Reload Currency</string>
    <string name="mnu_reset_input">Reset input</string>
    <string name="mnu_swap_to_from">Swap To and From</string>
    <string name="mnu_toggle_list_filter">Toggle List Filter</string>
    <string name="mnu_upgrade">Upgrade</string>
    <string name="pref_app_style">App Theme Style</string>
    <string name="pref_app_style_desc">Select light or dark</string>
    <string name="pref_auto_update_currency">Auto Update Currency</string>
    <string name="pref_auto_update_currency_desc">Auto update currency if more than a day old</string>
    <string name="pref_cat_currency_options">Currency Options</string>
    <string name="pref_cat_data_options">Data Options</string>
    <string name="pref_cat_display_options">Appearance Settings</string>
    <string name="pref_cat_format_options">Number Format Options</string>
    <string name="pref_cat_general_settings">General Settings</string>
    <string name="pref_cat_Information">Information</string>
    <string name="pref_currency_disable_int_check">Disable internet check</string>
    <string name="pref_currency_disable_int_check_desc">Disable internet check before currency download</string>
    <string name="pref_custom_keypad">Use Custom Keypad</string>
    <string name="pref_custom_keypad_desc">Use custom keypad for number input</string>
    <string name="pref_decimal_places">Decimal Places</string>
    <string name="pref_decimal_places_desc">\# of decimal places</string>
    <string name="pref_filter_enabled">Enable List Filter</string>
    <string name="pref_filter_enabled_desc">Enable/Disable Main List Filter</string>
    <string name="pref_filter_main_list">Filter Converter List</string>
    <string name="pref_filter_main_list_desc">Select items to show on converter list</string>
    <string name="pref_fontsize">Font Size</string>
    <string name="pref_fontsize_desc">Select Font Size</string>
    <string name="pref_force_en_locale">Force English Locale</string>
    <string name="pref_force_en_locale_desc">Force English (requires app restart)</string>
    <string name="pref_group_digits">Group Digits</string>
    <string name="pref_group_digits_desc">Group digits for increased readability</string>
    <string name="pref_imperial_unit_format">Format Imperial Units</string>
    <string name="pref_imperial_unit_format_desc">Format Imperial Unit results (i.e. Foot and Inches, …)</string>
    <string name="pref_keypad_position">Keypad Position - Bottom</string>
    <string name="pref_keypad_position_desc">Show popup keypad at bottom of screen</string>
    <string name="pref_quick_list_button">Show Quick List View Button</string>
    <string name="pref_quick_list_button_desc">Show Quick List View button on converter screen</string>
    <string name="pref_result_description">Show Result Description</string>
    <string name="pref_result_description_desc">Show result description below result box</string>
    <string name="pref_revert_keyboard">Use full keyboard layout</string>
    <string name="pref_revert_keyboard_desc">Shows full keyboard instead of just numbers</string>
    <string name="pref_scientific_notation">Scientific Notation</string>
    <string name="pref_scientific_notation_desc">Use scientific notation for very large/small values</string>
    <string name="pref_skin_keypad">Theme Custom Keypad</string>
    <string name="pref_skin_keypad_desc">Use theme on Keypad</string>
    <string name="pref_sort_alpha">Sort Alphabetically</string>
    <string name="pref_sort_alpha_desc">Sort main list alphabetically</string>
    <string name="pref_trim_trailing_zeros">Trim Trailing Zeros</string>
    <string name="pref_vibrate_on_result">Vibrate on Result</string>
    <string name="pref_vibrate_on_result_desc">Vibrate when calculating result</string>
    <string name="tip_before_tax">Pre-Tax ?</string>
    <string name="tip_bill_amount">Bill $</string>
    <string name="tip_reset">Reset</string>
    <string name="tip_round_to">Round to</string>
    <string name="tip_tax_amount">Tax Amount</string>
    <string name="tip_tip_amount">Tip Amount</string>
    <string name="tip_tip_percent">Tip %</string>
    <string name="tip_total_amount">Total Amount</string>
</resources>