<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:id="@id/TxtDnldFileSize" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/dnld_download_size" />
        <LinearLayout android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.wopnersoft.unitconverter.plus.util.ClearableEditText android:textColorHighlight="@color/text_sel" android:layout_gravity="center" android:id="@id/EditTxtDnldFileSize" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="100" android:ems="10" android:layout_weight="10.0" android:inputType="phone">
                <requestFocus />
            </com.wopnersoft.unitconverter.plus.util.ClearableEditText>
            <Spinner android:id="@id/SpinnerDnldFileUnit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="6.0" />
        </LinearLayout>
        <TextView android:textSize="18.0sp" android:id="@id/TxtDnldRate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/dnld_download_rate" />
        <LinearLayout android:id="@id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.wopnersoft.unitconverter.plus.util.ClearableEditText android:textColorHighlight="@color/text_sel" android:layout_gravity="center" android:id="@id/EditTxtDnldRate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="100" android:ems="10" android:layout_weight="10.0" android:inputType="phone" />
            <Spinner android:id="@id/SpinnerDnldRateUnit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="6.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/TxtDnldPer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="8.0dip" android:text="@string/dnld_per" android:layout_weight="10.0" />
            <Spinner android:id="@id/SpinnerDnldRateTime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="6.0" />
        </LinearLayout>
        <Button android:layout_gravity="right" android:id="@id/BtnCompute" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/computeButton" />
        <TextView android:textSize="18.0sp" android:id="@id/TxtResultHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dnld_estimated_download_time" />
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout4" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:id="@id/EditTxtResult" android:background="@drawable/result_text_decor_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <TextView android:id="@id/TxtBottomMsg" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/dnls_disclaimer" />
    </LinearLayout>
</ScrollView>